Clean up some source definitions, fix uncommon items appearing white due to api inconsistency, don't display weapons bucket if no weapons in source, allow comments in deepsight.gg manifests, fix collections bucket doing 1-item columns, fix collections bucket labels wrapping, use replacement sources over default sources when both are present (in the case of messed up watermarks in the api)

--- a/style/view/CollectionsView.scss
+++ b/style/view/CollectionsView.scss
@@ -24,6 +24,7 @@
 		display: flex;
 		flex-wrap: wrap;
     	height: fit-content;
+		min-width: calc(var(--slot-size) * 2);
 		
 		&-title {
 			flex-basis: 100%;
@@ -35,6 +36,8 @@
 			letter-spacing: .2em;
 			pointer-events: none;
 			user-select: none;
+			width: fit-content;
+			white-space: nowrap;
 			&::before {
 				content: "// ";
 			}
